--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,19 @@
 {
   "compilerOptions": {
-    "outDir": "build/dist",
+    "incremental": true,
+    "target": "es2021",
     "module": "commonjs",
-    "target": "es5",
-    "lib": ["es6", "dom"],
+    "lib": ["dom", "es2021"],
+    "jsx": "react-jsx",
+    "strict": true,
     "sourceMap": true,
-    "allowJs": true,
-    "jsx": "react",
+    "baseUrl": "./src",
     "moduleResolution": "node",
-    "rootDir": "src",
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "allowJs": true,
+    "outDir": ".erb/dll"
   },
-  "exclude": [
-    "node_modules",
-    "build",
-    "scripts",
-    "acceptance-tests",
-    "webpack",
-    "jest",
-    "src/setupTests.ts"
-  ],
-  "types": [
-    "typePatches"
-  ]
+  "exclude": ["test", "release/build", "release/app/dist", ".erb/dll"]
 }
