--- a/release/app/package.json
+++ b/release/app/package.json
@@ -15,6 +15,7 @@
     "link-modules": "node -r ts-node/register ../../.erb/scripts/link-modules.ts"
   },
   "dependencies": {
-    "sqlite3": "^5.1.6"
+    "sequelize": "^6.33.0",
+    "pg": "^8.11.3"
   }
 }
