--- a/package.json
+++ b/package.json
@@ -95,6 +95,8 @@
     }
   },
   "dependencies": {
+    "antd": "^5.9.0",
+    "axios": "^1.5.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
