--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
+    "lodash.countby": "^4.6.0",
     "lodash.debounce": "^4.0.8",
     "pg": "^8.11.3",
     "react": "^18.2.0",
@@ -116,6 +117,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.2",
+    "@types/lodash.countby": "^4.6.7",
     "@types/node": "20.2.5",
     "@types/pg": "^8.10.2",
     "@types/react": "^18.2.8",
