--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "start:preload": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.preload.dev.ts",
     "start:renderer": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack serve --config ./.erb/configs/webpack.config.renderer.dev.ts",
     "test": "jest",
-    "format": "prettier --write src/**/*.{ts,tsx,js,jsx,scss,css,json}"
+    "format": "prettier --write src/**/*.{ts,tsx,js,jsx,scss,css,json} --print-width 120"
   },
   "browserslist": [],
   "prettier": {
@@ -119,6 +119,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.2",
     "@types/lodash.countby": "^4.6.7",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "20.2.5",
     "@types/pg": "^8.10.2",
     "@types/react": "^18.2.8",
