--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "description": "A foundation for scalable desktop apps",
+  "description": "library management",
   "keywords": [
     "library-management"
   ],
