--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "start:preload": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.preload.dev.ts",
     "start:renderer": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack serve --config ./.erb/configs/webpack.config.renderer.dev.ts",
     "test": "jest",
-    "format": "prettier --write src/**/*.{ts,tsx,js,jsx,scss,css,json} --print-width 160"
+    "format": "prettier --write src/**/*.{ts,tsx,js,jsx,scss,css,json} --print-width 160",
+    "seed": "ts-node src/main/databases/migrate/seed.ts",
+    "mock": "ts-node src/main/databases/migrate/mock.ts"
   },
   "browserslist": [],
   "prettier": {
