--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
+    "highcharts-react-official": "^3.2.1",
     "lodash.countby": "^4.6.0",
     "lodash.debounce": "^4.0.8",
     "pg": "^8.11.3",
