--- a/package.json
+++ b/package.json
@@ -88,16 +88,18 @@
     }
   },
   "dependencies": {
-    "antd": "^5.9.0",
+    "antd": "^5.9.4",
     "axios": "^1.5.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
-    "highcharts-react-official": "^3.2.1",
+    "faker": "5.5.3",
+    "html2canvas": "^1.4.1",
     "lodash.countby": "^4.6.0",
     "lodash.debounce": "^4.0.8",
     "pg": "^8.11.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "sequelize": "^6.33.0"
