--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "library management",
+  "name": "library-management",
   "version": "4.6.0",
   "description": "A foundation for scalable desktop apps",
   "license": "MIT",
