--- a/package.json
+++ b/package.json
@@ -235,12 +235,11 @@
     ],
     "publish": {
       "provider": "github",
-      "owner": "electron-react-boilerplate",
-      "repo": "electron-react-boilerplate"
+      "owner": "library management",
+      "repo": "library management"
     }
   },
   "collective": {
-    "url": "https://opencollective.com/electron-react-boilerplate-594"
   },
   "devEngines": {
     "node": ">=18.17.x",
